--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/i18n/en.json
+    - assets/i18n/fr.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
