--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
 
   shared_preferences: ^0.5.4
   
+  path_provider: ^1.4.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,8 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/i18n/en.json
-    - assets/i18n/fr.json
+    - assets/i18n/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
